--- a/DynamixelSDKSharp/DynamixelSDKSharp.csproj
+++ b/DynamixelSDKSharp/DynamixelSDKSharp.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Servo.cs" />
     <Compile Include="WorkerThread.cs" />
+    <Compile Include="WriteAsyncRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="dxl_x64_c.dll">
