--- a/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
+++ b/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\API.cs" />
+    <Compile Include="Requests\Calibrate\GetLimits.cs" />
     <Compile Include="Requests\Heliostat\CalibrateLimits.cs" />
     <Compile Include="Requests\Calibrate\LogServoValues.cs" />
     <Compile Include="Requests\Calibrate\SetLimits.cs" />
@@ -147,12 +148,14 @@
     <Compile Include="Requests\Scheduler\Disable.cs" />
     <Compile Include="Requests\Scheduler\Enable.cs" />
     <Compile Include="Requests\Scheduler\Get.cs" />
+    <Compile Include="Requests\Servo\GetRegisterForAll.cs" />
     <Compile Include="Requests\Servo\GetRegisterValues.cs" />
     <Compile Include="Requests\Data\HighFrequencyRequest.cs" />
     <Compile Include="Requests\Servo\HomeAll.cs" />
     <Compile Include="Requests\Servo\MultiGet.cs" />
     <Compile Include="Requests\Servo\MultiMove.cs" />
     <Compile Include="Requests\Servo\MultiSet.cs" />
+    <Compile Include="Requests\Servo\SetRegisterForAll.cs" />
     <Compile Include="Requests\System\Census.cs" />
     <Compile Include="Requests\System\CheckSafetyConstraints.cs" />
     <Compile Include="Requests\Data\Logger.cs" />
@@ -171,6 +174,7 @@
     <Compile Include="Requests\System\LogAllServoRegisters.cs" />
     <Compile Include="Requests\Servo\Move.cs" />
     <Compile Include="Requests\DoForAll\Nudge.cs" />
+    <Compile Include="Requests\System\Reboot.cs" />
     <Compile Include="Requests\System\Refresh.cs" />
     <Compile Include="Requests\Servo\SetRegister.cs" />
     <Compile Include="Requests\Servo\SetRegisterValue.cs" />
