add readme to project

--- a/Samples/HaloTestHarness/HaloTestHarness/HaloTestHarness.csproj
+++ b/Samples/HaloTestHarness/HaloTestHarness/HaloTestHarness.csproj
@@ -78,6 +78,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="readme.md" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\DynamixelSDKSharp\DynamixelSDKSharp.csproj">
